    in status bar (#3025855)
  Bugfix: Options dialog didn't update when importing settings
    from .ini file. (#2794137)
  Bugfix: New fix for the bug #2210403 (#2929005)
  Bugfix: Take changed compareoptions into use in folder compare (#3046938)
  Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
  Bugfix: Location pane focus enabled "Save" (#3022292)
  Translation updates:
  - Chinese (#3033324)
  - French (#3025202)

WinMerge 2.13.13 - 2010-06-19 (r7205)
  Improve editing of linefilter regular expressions (#3015416)
  Installer: Embed MS runtime files installer for x64 (r7150)
  Installer: Set default language with MSI setup (#3014912)
  Bugfix: Compare by size always checked file times too (#2919510)
  Bugfix: Line filtering wasted huge amounts of memory (#3014162)
  Bugfix: Difference blocks not cleared after merging (#2995925)
  Bugfix: Wrong time stamp even in generated patch file (#2982964)
  Bugfix: Ignoring comments wrongly recognized // in strings (#3016907)
  New translation: Serbian (#3017674)
  Translation updates:
  - Czech (r7199)
  - Japanese (r7153)

WinMerge 2.13.12 - 2010-04-29 (r7148)
  Update copyright year to 2010
  Installer: Embed MS runtime files installer (r7139)
  Fix help locations (#2988974)
  Bugfix: Strange scrolling effect in location pane (#2942869)
  Bugfix: Difference panel didn't show differences when moved blocks were
    enabled (#2988656)
  Translation updates:
  - Chinese Traditional (#2954833)
  - French (#2968200)
  - Polish (#2951149)
  - Slovenian (#2934354)
  - Swedish (#2943964)

WinMerge 2.13.11 - 2010-01-15 (r7111)
  Write config log as UTF-8 file (r7057)
  Update PCRE to version 8.00 (r7068)
  Update SCEW to version 1.1.1 (r7079)
  Add "Additional Tasks" dialog to MSI setup (#2925723)
  Bugfix: Plugin error after interrupting folder compare (#2919475)
  Bugfix: GUI Word Wrap missing text (#2921400, #2894033)
  Bugfix: Selected custom odepage was not used (#2921555)