@@ -19,6 +19,8 @@ WinMerge 2.13.14
   Bugfix: Take changed compareoptions into use in folder compare (#3046938)
   Bugfix: "Copy and advance" toolbar icons not automatically enabled (#3033325)
   Bugfix: Location pane focus enabled "Save" (#3022292)
+  Bugfix: WinMerge was vulnerable to DLL hijacking as described in
+    Microsoft Security Advisory (2269637)  (#33056008)
   Translation updates:
   - Chinese (#3033324)
   - French (#3025202)
